--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -34,7 +34,8 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:src="@drawable/ic_side_menu"
-                android:tint="?attr/colorOnSurface" />
+                android:tint="?attr/colorOnSurface"
+                android:layout_weight="0"/>
 
             <com.google.android.material.textfield.TextInputLayout
                 style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -43,7 +44,8 @@
                 app:boxStrokeWidth="0dp"
                 app:endIconDrawable="@drawable/ic_clear"
                 app:endIconMode="clear_text"
-                app:hintEnabled="false">
+                app:hintEnabled="false"
+                android:layout_weight="1">
 
                 <com.google.android.material.textfield.TextInputEditText
                     android:id="@+id/searchInput"
@@ -54,6 +56,16 @@
                     android:hint="@string/toolbar_search" />
 
             </com.google.android.material.textfield.TextInputLayout>
+
+            <ImageView
+                android:id="@+id/sortrigger"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_marginStart="4dp"
+                android:layout_marginEnd="16dp"
+                android:layout_weight="0"
+                android:src="@drawable/ic_popup"
+                android:tint="?attr/colorOnSurface" />
 
         </LinearLayout>
 
