Improvement create_order (amount field)

--- a/app/src/main/res/layout/fragment_create_order.xml
+++ b/app/src/main/res/layout/fragment_create_order.xml
@@ -62,22 +62,29 @@
             <TextView
                 android:id="@+id/itemsShow"
                 android:layout_width="match_parent"
-                android:layout_height="30dp"
+                android:layout_height="wrap_content"
+                android:textSize="15sp"
+
                 android:layout_weight="0"
-                android:text="@string/items" />
+
+                android:text="@string/items"
+                />
 
             <LinearLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/newSpinner">
+                android:id="@+id/newSpinner"
+                >
 
                 <Spinner
                     android:id="@+id/equipmentInput"
-                    android:layout_width="wrap_content"
+                    android:layout_width="250dp"
                     android:layout_height="40dp" />
                 <EditText
-                    android:layout_width="match_parent"
+                    android:layout_width="250dp"
+                    android:hint="Ilość"
                     android:layout_height="wrap_content"
+
                     android:id="@+id/amount"
                     />
 
@@ -184,16 +191,21 @@
                 android:hint="0"
                />
 
-            <Button
+            <com.google.android.material.button.MaterialButton
                 android:id="@+id/save"
+                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="5dp"
-                android:layout_marginBottom="5dp"
-                android:layout_weight="0"
-                android:backgroundTint="@color/colorPrimary"
+                android:layout_gravity="center"
+                android:layout_marginStart="20dp"
+                android:layout_marginEnd="20dp"
+                android:backgroundTint="@color/colorAccent"
                 android:onClick="saveTask"
-                android:text="@string/co_save" />
+                android:text="@string/co_save"
+                android:textColor="?attr/colorSurface"
+                app:cornerRadius="20dp"
+                app:strokeColor="@color/colorAccent"/>
+
 
         </LinearLayout>
     </RelativeLayout>
